--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
 }
 
 #casa {
-    position: relative;
-    width:100%;
+    position:relative;
+    display: inline-block;
+   
 }
 
   /*#jugador:first-child {margin-left:0;}*/
