--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
 
 #casa {
     position:relative;
-    display: inline-block;
-   
+    display:none;
 }
 
   /*#jugador:first-child {margin-left:0;}*/
@@ -14,6 +13,7 @@
   #jugador{
     width: 100%;
     position: relative;
+    display:none;
   }
 
 span {
@@ -32,6 +32,7 @@ span {
     padding:.1em;
     margin-right:-1em;
    font-family:serif;
+   
   }
 
 
