--- a/style.css
+++ b/style.css
@@ -1,9 +1,35 @@
+body {
+  width:100%;
+  height:720px;
+  background: rgba(96,132,72,1);
+  background: -moz-radial-gradient(center, ellipse cover, rgba(96,132,72,1) 28%, rgba(77,113,53,1) 48%, rgba(28,63,3,1) 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(28%, rgba(96,132,72,1)), color-stop(48%, rgba(77,113,53,1)), color-stop(100%, rgba(28,63,3,1)));
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(96,132,72,1) 28%, rgba(77,113,53,1) 48%, rgba(28,63,3,1) 100%);
+  background: -o-radial-gradient(center, ellipse cover, rgba(96,132,72,1) 28%, rgba(77,113,53,1) 48%, rgba(28,63,3,1) 100%);
+  background: -ms-radial-gradient(center, ellipse cover, rgba(96,132,72,1) 28%, rgba(77,113,53,1) 48%, rgba(28,63,3,1) 100%);
+  background: radial-gradient(ellipse at center, rgba(96,132,72,1) 28%, rgba(77,113,53,1) 48%, rgba(28,63,3,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#608448', endColorstr='#1c3f03', GradientType=1 );
+
+
+
+}
+
+.rot-uno{
+     transform: rotate(-2deg);
+    
+  }
+.rot-dos{
+     transform: rotate(1deg);
+  }
+
+
 #container{
     width: 100%;
     position: absolute;
     display: grid;
     grid-row-gap: 6px;
     align-content: center;
+    
     
 }
 
@@ -24,14 +50,6 @@
     display:none;
   }
 
-  .negra{
-    color:black;
-  }
-
-  .roja{
-    color:red;
-  }
-
 .cards{
     background:#fff;
     border: 1px solid gray;
@@ -47,9 +65,17 @@
     height: 5em;
     padding:.1em;
     margin-right:-1em;
-   font-family:serif;
+    font-family:serif;
    
   }
+  .negra{
+    color:black;
+  }
+
+  .roja{
+    color:red;
+  }
+
 
   .oculta{
     background-color:red;
