--- a/style.css
+++ b/style.css
@@ -1,33 +1,57 @@
-#container{
-    position: absolute;
+body {
+  width:100%;
+  height:720px;
+  background: rgba(96,132,72,1);
+  background: -moz-radial-gradient(center, ellipse cover, rgba(96,132,72,1) 28%, rgba(77,113,53,1) 48%, rgba(28,63,3,1) 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(28%, rgba(96,132,72,1)), color-stop(48%, rgba(77,113,53,1)), color-stop(100%, rgba(28,63,3,1)));
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(96,132,72,1) 28%, rgba(77,113,53,1) 48%, rgba(28,63,3,1) 100%);
+  background: -o-radial-gradient(center, ellipse cover, rgba(96,132,72,1) 28%, rgba(77,113,53,1) 48%, rgba(28,63,3,1) 100%);
+  background: -ms-radial-gradient(center, ellipse cover, rgba(96,132,72,1) 28%, rgba(77,113,53,1) 48%, rgba(28,63,3,1) 100%);
+  background: radial-gradient(ellipse at center, rgba(96,132,72,1) 28%, rgba(77,113,53,1) 48%, rgba(28,63,3,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#608448', endColorstr='#1c3f03', GradientType=1 );
 
+}
+
+.rot-uno{
+     transform: rotate(-2deg);
+    
+  }
+.rot-dos{
+     transform: rotate(1deg);
+  }
+
+
+#container{
+    width: 100%;
+    position: absolute;
+    display: grid;
+    grid-row-gap: 6px;
+    align-content: center;
+        
+}
+
+.rows{
+  grid-column: 2 / 3;
 }
 
 #casa {
     position:relative;
-/*    display:none; */
+    display:none;
+   
 }
 
   /*#jugador:first-child {margin-left:0;}*/
 
   #jugador{
-    width: 100%;
+
     position: relative;
-/*    display:none; */
+    display:none;
   }
 
-  #trebol, #pica{
-    color:black;
-  }
-
-  #diamante, #corazon{
-    color:red;
-  }
-
-span {
+.cards{
     background:#fff;
     border: 1px solid gray;
-    border-radius:4px;
+    border-radius:6px;
       -moz-border-radius:4px;
       -webkit-border-radius:4px;
     -moz-box-shadow:0 2px 2px 1px #999;
@@ -39,9 +63,17 @@ span {
     height: 5em;
     padding:.1em;
     margin-right:-1em;
-   font-family:serif;
-   
+    font-family:serif;
+   margin: 1px;
+  }
+  .negra{
+    color:black;
   }
 
-
- 
+  .roja{
+    color:red;
+  }
+  .oculta{
+    border: 2px solid black;
+    background-color:red;
+  }
